[package]
name = "libva-x264"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

# [profile.dev]
# panic = 'abort'

[dependencies]
c_string = "0.7.2"
# gbm = { version = "0.12.0", default-features = false, features = ["drm", "drm-support"] }
# gles30 = { version = "0.5.2", features = ["struct_loader"] }
# khronos-egl = { version = "5.0.0", features = ["dynamic"] }
memfd = "0.6.3"
nix = { version = "0.26.2", default-features = false, features = ["ioctl", "mman"] }
page_size = "0.6.0"

[build-dependencies]
bindgen = "0.66.1"

